syntax = "proto2";

package mypkg;

import "scalapb/validate.proto";
import "validate/validate.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
    preprocessors: ["-scalapb-validate-preprocessor"]
};

message Demo {
    optional int32 positive_int = 1 [(validate.rules).int32 = { gt: 0}];
    optional int32 at_least_4 = 2 [(validate.rules).int32 = { gte: 4}];
}

message NonEmpty {
    repeated Demo demos = 1 [(validate.rules).repeated.min_items = 1];
}
